# redact-all-the-things

./: .editorconfig  .gitignore  .graphifyignore  .pre-commit-config.yaml  .pymarkdown.json  .tool-versions  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile.worker  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  mkdocs.yml  pyproject.toml
.codex/: hooks.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml  implementation-slice.yml
.github/workflows/: pages.yml  quality.yml
config/: worker-validation.yml
docs/: development.md  index.md  roadmap.md
docs/adr/: 0001-documentation-and-governance.md  0002-control-plane-boundaries.md  index.md  template.md
docs/architecture/: analysis-worker.md  control-plane-api.md  infrastructure.md  technical-scope.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-15/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-16/: graph.json  manifest.json
graphify-out/2026-06-17/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-18/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-01/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
notebooks/: worker-validation-rasterization.ipynb
src/redact_api/: __init__.py  aws.py  domain.py  http.py  lambda_handler.py  services.py  worker.py
tests/: conftest.py
tests/api/: test_http.py
tests/domain/: test_fixtures.py  test_jobs.py  test_lifecycle.py  test_manifests.py
tools/: check_floci.sh  infra_smoke_floci.sh  strip_notebook_outputs.py  worker_ocr_smoke.py
(+79 files in other folders)
