[project]
name = "redact-all-the-things-tooling"
version = "0.1.0"
description = "Repository tooling for Redact All The Things"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3==1.43.38",
    "fastapi==0.139.0",
    "mangum==0.21.0",
    "pillow==12.3.0",
    "pydantic==2.13.4",
    "pypdfium2==5.11.0",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.6",
  "pre-commit==4.6.0",
  "pymarkdownlnt==0.9.38",
  "pytest==9.1.1",
  "yamllint==1.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "localstack: requires the local LocalStack Docker service",
]
